tests/reject/bad_scope_2.ul
void main() {
     int x;
     if (true) {
        string y;
        if (true) {
           string x;
        }
        y = x;
     }
}